sk-cli/src/xray/view/tests/snapshots/skctl__xray__view__tests__view_test__itest_render_event_list_event_selected@2.snap
---
source: sk-cli/src/xray/tests/view_test.rs
expression: cf
---
CompletedFrame {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 20 },
        content: [
            "┌──────────────────────────────────────────────────────────────────────────────┐",
            "│   00:00:00 (0 applied/0 deleted)                                             │",
            "│   00:00:01 (1 applied/0 deleted)                                             │",
            "│>> 00:00:02 (3 applied/0 deleted)                       1 error/0 warnings    │",
            "│++   + test-namespace/test_depl1                                              │",
            "│     + test-namespace/test_depl2xxxxxxxxxxxxxxxxxxx...  1 error/0 warnings    │",
            "│     + test-namespace/test_depl3xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx... │",
            "│   00:00:03 (0 applied/1 deleted)                                             │",
            "│                                                                              │",
            "│                                                                              │",
            "│                                                                              │",
            "│                                                                              │",
            "│                                                                              │",
            "│                                                                              │",
            "└──────────────────────────────────────────────────────────────────────────────┘",
            "┌──────────────────────────────────────────────────────────────────────────────┐",
            "│Hello SimKube!                                                                │",
            "│Use arrows to navigate, space to select, 'q' to quit.                         │",
            "│                                                                              │",
            "└──────────────────────────────────────────────────────────────────────────────┘",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
            x: 56, y: 3, fg: White, bg: Red, underline: Reset, modifier: REVERSED,
            x: 79, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 4, fg: Reset, bg: Blue, underline: Reset, modifier: NONE,
            x: 4, y: 4, fg: Reset, bg: Blue, underline: Reset, modifier: ITALIC,
            x: 33, y: 4, fg: Reset, bg: Blue, underline: Reset, modifier: NONE,
            x: 79, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
            x: 56, y: 5, fg: White, bg: Red, underline: Reset, modifier: NONE,
            x: 79, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 4, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
            x: 79, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 15, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    area: Rect {
        x: 0,
        y: 0,
        width: 80,
        height: 20,
    },
    count: 0,
}
